fix: make AiCustomerControllerContractTest Java 8 compatible